--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   },
   "dependencies": {
     "@aws-cdk/core": "1.139.0",
-    "source-map-support": "^0.5.16"
+    "source-map-support": "^0.5.16",
+    "@aws-cdk/aws-cognito": "^1.139.0",
+    "@aws-cdk/aws-codecommit": "^1.139.0",
+    "@aws-cdk/aws-iam": "^1.139.0",
+    "@aws-cdk/aws-amplify": "^1.139.0"
   }
 }
